fix spacing issue on about section

--- a/css/app.css
+++ b/css/app.css
@@ -8948,7 +8948,7 @@ a {
   .about-container .profile {
     padding: 50px 0 50px 0; }
   .about-container .profile-info {
-    padding: 50px 0 50px 0;
+    padding: 50px 10px 50px 10px;
     text-align: center; }
  }
 
