--- a/scss/mystyles/_about.scss
+++ b/scss/mystyles/_about.scss
@@ -47,7 +47,7 @@
            padding:50px 0 50px 0;
         }
        .profile-info{
-            padding:50px 0 50px 0;
+            padding:50px 10px 50px 10px;
             text-align: center;
        }
     }
